# rust-test-framework

./: .gitignore  Cargo.toml  README.md  test_output.txt
.github/workflows/: rust.yml
rtest/: Cargo.toml
rtest/src/: lib.rs
rtest/src/attributes/: mod.rs  test_case_source.rs
rtest/tests/: test_ddt.rs  test_ddt_data.json
rtest/tests/test_attributes/: mod.rs
rust_test/: Cargo.toml
rust_test/src/: lib.rs
rust_test/src/doc_references/: source_type.rs
rust_test/tests/: test_built_in_types_string.json  test_ddt.rs  test_ddt_data.json
rust_test_core/: Cargo.toml
rust_test_core/src/: attributes.rs  doc_references.rs  lib.rs  unit_tests.rs
rust_test_core/src/attributes/: common.rs  test_case_source.rs  test_fixture.rs  test_params.rs  test_params_source.rs
rust_test_core/src/attributes/test_case_source/: source_type.rs
rust_test_core/src/attributes/test_params_source/: source_type.rs
rust_test_core/src/doc_references/: source_type.rs
rust_test_core/src/unit_tests/: test_generate_test_set.rs  test_value_to_suffix.rs
rust_test_core/tests/: test_case_source_tests.rs
rust_test_framework/: Cargo.toml
rust_test_framework/src/: lib.rs
rust_test_framework/src/doc_references/: source_type.rs
rust_test_framework/tests/: compile_tests.rs  framework_test.rs  test_complex.json  test_ddt.rs
rust_test_framework/tests/compile_tests/should_fail/: duplicate_enum.rs  duplicate_enum.stderr  duplicate_params_single.rs  duplicate_params_single.stderr  duplicate_params_stacked.rs  duplicate_params_stacked.stderr  duplicate_source_internal.rs  duplicate_source_internal.stderr  duplicate_source_mixed.rs  duplicate_source_mixed.stderr  duplicate_struct.rs  duplicate_struct.stderr  invalid_json_string.stderr  jr_404.stderr  jr_invalid_json.rs  jr_invalid_json.stderr  jr_missing_field.rs  jr_missing_field.stderr  jr_type_mismatch.stderr  json_response_404.rs  json_response_404.stderr  json_response_invalid_json.stderr  json_response_type_mismatch.rs  json_response_type_mismatch.stderr  path_mask_no_match.rs  path_mask_no_match.stderr  path_not_found.rs  path_not_found.stderr  setup_missing.stderr  teardown_missing.rs  teardown_missing.stderr
rust_test_framework/tests/compile_tests/should_pass/: fixture_success.rs
rust_test_framework/tests/test_data/: invalid.json  test_all_variants.json  test_empty_suffix.json  test_enums.json  test_multiple_age_50_users.json  test_single_object.json  test_vec_of_vec.json
rust_test_framework/tests/test_ddt/: main.rs
rust_test_framework/tests/test_internal/: main.rs
rust_test_framework/tests/test_mixed_inline_and_source_params/: main.rs
rust_test_framework/tests/test_params/: enums.rs  main.rs  simple.rs  structs.rs
rust_test_framework/tests/test_params_source/: json_file.rs  json_response.rs  json_string.rs  main.rs  path_mask.rs  path_mask_recursive.rs
rust_test_framework/tests/test_setup_teardown/: main.rs
rust_test_framework/tests/test_wait_for/: main.rs
rust_test_framework/tests/ui/: duplicate_enum.stderr  duplicate_params_single.stderr  duplicate_params_stacked.stderr  duplicate_source_mixed.stderr  duplicate_struct.stderr  invalid_json_string.rs  invalid_json_string.stderr  qualified_paths.rs  setup_missing.rs  setup_missing.stderr
rust_test_proc_macro/: Cargo.toml  test_data.json
rust_test_proc_macro/src/: lib.rs
tcs_attribute/: Cargo.toml
