[workspace]
resolver = "3"
members = [
    "rust_test_framework",
    "rust_test_core",
    "rust_test_proc_macro",
]

[workspace.package]
version = "0.1.1-alpha.3"
edition = "2024"
authors = ["Viacheslav Dermichev"]
description = "A testing framework for Rust"
license = "Apache-2.0"
repository = "https://github.com/rust-test/rust-test-framework"
readme = "README.md"
keywords = ["test", "framework", "testing", "ddt"]
categories = ["development-tools::testing"]

[workspace.dependencies]
rust_test_core = { path = "rust_test_core", version = "0.1.1-alpha.3" }
rust_test_proc_macro = { path = "rust_test_proc_macro", version = "0.1.1-alpha.3" }
