[workspace]
resolver = "2"
members = [
    "rust_test_framework",
    "rust_test_core",
    "rust_test_proc_macro",
]

[workspace.package]
version = "0.1.3-alpha.1"
rust-version = "1.80.0"
edition = "2021"
authors = ["Viacheslav Dermichev"]
description = "A testing framework for Rust"
license = "Apache-2.0"
repository = "https://github.com/rust-test/rust-test-framework"
readme = "README.md"
keywords = ["test", "framework", "testing", "ddt"]
categories = ["development-tools::testing"]

[workspace.dependencies]
rust_test_core = { path = "rust_test_core", version = "0.1.3-alpha.1" }
rust_test_proc_macro = { path = "rust_test_proc_macro", version = "0.1.3-alpha.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
# dev-dependencies
trybuild = "1.0"
thirtyfour = "0.36" # for example with driver
glob = "0.3"
ureq = "2.9"
# schemars = "1.2.0" # for schema and config documentation and validation if needed
