[package]
name = "rust_test_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core logic for rust_test_framework"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
serde_json = "1.0"
proc-macro2 = "1.0"