[package]
name = "rust_test_core"
rust-version.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core logic for rust_test_framework"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
syn.workspace = true
quote.workspace = true
serde.workspace = true
serde_json.workspace = true
proc-macro2.workspace = true
glob = "0.3"