[package]
name = "rust_test_proc_macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Procedural macros for rust_test framework"
license.workspace = true
repository.workspace = true
readme.workspace = true

[lib]
proc-macro = true

[dependencies]
rust_test_core = { workspace = true }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
