[package]
name = "rust_test_proc_macro"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Procedural macros for rust_test_framework"
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
rust_test_core = { workspace = true }

[dev-dependencies]
